# vigem-rust

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: ds4.rs  ds4_ex.rs  x360.rs
src/: client.rs  lib.rs  target.rs
src/controller/: ds4.rs  mod.rs  x360.rs
src/internal/: bus.rs  ioctl.rs  mod.rs  notification_workers.rs  overlapped.rs
